styles.css
body {
    display: flex;
    background-color: rgb(29, 29, 29);
    color: white;
    justify-content: center;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

#mainContainer {
    border: 1px solid rgb(75, 75, 75);
    height: 100vh;
    width: 90vw;
}

#header {
    display: flex;
    border: 1px solid rgba(202, 108, 124, 0.774);
    background-color: rgba(202, 108, 124, 0.774);
    width: 90vw;
    height: 100px;
    justify-content: center;
}

#addBookBtn {
    font-size: 28px;
    display: flex;
    border: 1px solid rgba(48, 131, 48, 0.5);
    border-radius: 5px;
    background-color: rgba(48, 131, 48, 0.5);
    width: 200px;
    height: 80px;
    margin-top: 8px;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

#addBookBtn:hover {
    font-size: 32px;
    background-color:rgba(82, 235, 82, 0.74);
    width: 220px;
    height: 84px;
}


.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: (rgb(29, 29, 29));
    background-color: rgba(29, 29, 29, 0.4);
}

.modal-content {
    background-color: rgb(49, 49, 49);
    margin: 15% auto;
    padding: 20px;
    padding-bottom: 80px;
    border: 1px solid orangered;
    width: 450px;
    height:max-content;
    border-radius: 5px;
}

.close {
    color: #aaa;
    float: right;
    font-size: 22px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
    font-size: 23px
}

.addBook {
    color: #aaa;
    float: right;
    font-size: 50px;
    font-weight: bold;
}

.addBook:hover,
.addBook:focus {
    color: green;
    font-size: 52px;
    text-decoration: none;
    cursor: pointer;
}

#addBookDiv {
    display: flex;
    justify-content: center;
}

#btitle {
    margin-top: 10px;
    margin-left: 19px;
}

#bauthor {
    margin-top: 7px;
}


#bpages {
    margin-top: 7px;
    margin-left: 8px;
}

#bisread {
    margin-top: 10px;
    margin-left: 45px;
}

input[type=text] {
    outline: none;
    background-color:rgb(49, 49, 49);
    color: white;
    font-size: 16px;
    border: 1px solid rgb(75, 75, 75);
    padding-left: 7px;
    border-radius: 5px;
}

input[type=text]:hover,
input[type=text]:focus {
    background-color:rgb(75, 75, 75);
}

input[type=text]:focus {
    border-color: white;
}


#libraryDisplay {
    height: 70vh;
    display: grid;
    grid-template-columns: auto auto auto auto;
    grid-template-rows: auto auto auto auto;
}

.libraryCard {
    display:flex;
    position:relative;
    justify-content: center;
    align-items:center;
    height: 4fr;
    width: 4fr;
    border: 1px solid orange;
    background-color: rgba(185, 134, 40, 0.445);
}

.libraryCard:hover,
.libraryCard:focus {
    background-color:rgba(255, 199, 96, 0.664);
}

.deleteButton {
    display: flex;
    justify-content: center;
    align-items: center;
    position:absolute;
    width: 45px;
    height: 35px;
    border: 1px solid red;
    bottom: 5px;
    right: 5px;
    font-size: 20px;
    cursor: pointer;
}

.deleteButton:hover,
.deleteButton:focus {
    background-color: rgb(255, 96, 96);
    width: 66px;
    height: 55px;
    font-size: 30px;
}


#modalHeader {
    display: flex;
    justify-content: center;
    padding-bottom: 12px;
    padding-right: 115px;
}

.isReadToggle {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 45px;
    height: 35px;
    border: 1px solid blue;
    bottom: 5px;
    left: 5px;
    font-size: 20px;
    cursor: pointer;
}

.isReadToggle:hover,
.isReadToggle:focus {
    background-color: rgb(109, 109, 255);
    width: 66px;
    height: 55px;
    font-size: 30px;
}

.isReadIcon {
    height: 24px;
    width: 24px;
}

.bookClosedIcon {

    background-image: url("./img/closedBookIcon.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 40px 30px;
    z-index: 1;
}

.bookOpenIcon {

    background-image: url("./img/openBookIcon.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 40px 30px;
    z-index: 1;
}

.bookClosedIcon:hover,
.bookClosedIcon:focus,
.bookOpenIcon:hover,
.bookOpenIcon:focus {
    background-size: 60px 50px;

}

